--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -25,6 +25,14 @@ body {
     print-color-adjust: exact;
   }
 
+  * {
+    text-shadow: none !important;
+    box-shadow: none !important;
+    -webkit-print-color-adjust: exact !important;
+    print-color-adjust: exact !important;
+    color-adjust: exact !important;
+  }
+
   body.print-full-scroll,
   html.print-full-scroll,
   body.print-full-scroll app-root,
